# rusoto

./: Cargo.toml  appveyor.yml
codegen/: Cargo.toml
codegen/src/: botocore.in.rs  lib.rs
codegen/src/generator/: mod.rs  rest_xml.rs
rusoto/: enum.Region.html  index.html  struct.AwsCredentials.html  struct.ChainProvider.html  struct.CredentialsError.html  struct.EnvironmentProvider.html  struct.HttpDispatchError.html  struct.HttpResponse.html  struct.IamProvider.html  struct.ParseRegionError.html  struct.ProfileProvider.html  struct.SignedRequest.html  trait.DispatchSignedRequest.html  trait.ProvideAwsCredentials.html  type.DefaultCredentialsProvider.html  type.DefaultCredentialsProviderSync.html
rusoto/acm/: enum.AddTagsToCertificateError.html  enum.DeleteCertificateError.html  enum.DescribeCertificateError.html  enum.GetCertificateError.html  enum.ListCertificatesError.html  enum.ListTagsForCertificateError.html  enum.RemoveTagsFromCertificateError.html  enum.RequestCertificateError.html  enum.ResendValidationEmailError.html  index.html  struct.AcmClient.html  struct.AddTagsToCertificateRequest.html  struct.CertificateDetail.html  struct.CertificateSummary.html  struct.DeleteCertificateRequest.html  struct.DescribeCertificateRequest.html  struct.DescribeCertificateResponse.html  struct.DomainValidation.html  struct.DomainValidationOption.html  struct.GetCertificateRequest.html  struct.GetCertificateResponse.html  struct.ListCertificatesRequest.html  struct.ListCertificatesResponse.html  struct.Tag.html  (+28 more)
src/: lib.rs  mock.rs  s3.rs  signature.rs
tests/: s3.rs
(+6825 files in other folders)
