[package]
authors = ["Anthony DiMarco <ocramida@gmail.com>", "Jimmy Cuadra <jimmy@jimmycuadra.com>", "Matthew Mayer <matthewkmayer@gmail.com>"]
build = "build.rs"
description = "Code generation library for Rusoto."
license = "MIT"
name = "rusoto_codegen"
repository = "https://github.com/rusoto/rusoto"
version = "0.2.7"

[build-dependencies.serde_codegen]
optional = true
version = "0.8.13"

[dependencies]
Inflector = "0.4.0"
lazy_static = "0.1.16"
regex = "0.1.65"
serde = "0.8.13"
serde_json = "0.8.3"

[dependencies.clippy]
optional = true
version = "0.0"

[dependencies.serde_codegen]
optional = true
version = "0.8.13"

[dependencies.serde_derive]
optional = true
version = "0.8.13"

[features]
default = ["serde-codegen"]
nightly-testing = ["clippy", "unstable"]
unstable = ["serde_derive"]
serde-codegen = ["serde_codegen"]
